Bug 298684 - Activiy list widget does not show activity icons after a restart
Summary: Activiy list widget does not show activity icons after a restart
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: activities (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-23 18:36 UTC by maxime.haselbauer
Modified: 2012-05-26 11:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments
Activites have icons but activity list widget does show them after a restart (557.77 KB, application/octet-stream)
2012-04-23 18:39 UTC, maxime.haselbauer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description maxime.haselbauer 2012-04-23 18:36:47 UTC
I have an activity list widget in my toolbar at the bottom of my screen
When I set up an icon for an activity, the icon is shown next to the activity name in the
widget 
When I restart the computer, activities still have their icon defined but it is not shown anymore in the acitvity list widget

I am creating a new bug as instructed by David Narvaez,

See also
https://bugs.kde.org/show_bug.cgi?id=295721

Reproducible: Always
Comment 1 maxime.haselbauer 2012-04-23 18:39:08 UTC
Created attachment 70611 [details]
Activites have icons but activity list widget does show them after a restart
Comment 2 David E. Narvaez 2012-04-24 11:53:35 UTC
Forgot to ask you to add me in the CC list :) Confirming this, I'm working on it.
Comment 3 Eric Mesa 2012-05-02 13:56:12 UTC
Would this also be the place to work on the fact that the names of the activities are lost in the cashew as well?  Seems to be related.  If not I'll open a new bug.
Comment 4 David E. Narvaez 2012-05-03 16:38:46 UTC
(In reply to comment #3)
> Would this also be the place to work on the fact that the names of the
> activities are lost in the cashew as well?  Seems to be related.  If not
> I'll open a new bug.

Don't think it is related, please open a new bug to track that issue. Thanks for reporting it!
Comment 5 Eric Mesa 2012-05-03 17:11:52 UTC
OK, will do
Comment 6 David E. Narvaez 2012-05-16 21:32:18 UTC
Git commit 007b17de0a2e8c0116f54033cfcadc8061ce3b37 by David E. Narváez.
Committed on 16/05/2012 at 23:27.
Pushed by narvaez into branch 'KDE/4.8'.

Signal the End of Ontology Loading on DBus

Removed a currently unused parameter from the signal signature and
exposed the signal on the DBus XML interface
REVIEW: 104964

M  +1    -0    nepomuk/interfaces/org.kde.nepomuk.OntologyManager.xml
M  +1    -1    nepomuk/services/storage/nepomukcore.cpp
M  +1    -1    nepomuk/services/storage/ontologyloader.cpp
M  +1    -1    nepomuk/services/storage/ontologyloader.h

http://commits.kde.org/kde-runtime/007b17de0a2e8c0116f54033cfcadc8061ce3b37
Comment 7 David E. Narvaez 2012-05-26 11:29:10 UTC
Git commit 2e417e38e3b9051eebc24138612ac5731e7a20ad by David E. Narváez.
Committed on 26/05/2012 at 13:27.
Pushed by narvaez into branch 'KDE/4.8'.

Use Config to Provide Activity Icons

Use the information in the activities config file to provide icons
since Nepomuk's async ontology loading will not be able to provide
that info on session startup.
FIXED-IN: 4.8.4
REVIEW: 105008

M  +11   -15   service/ActivityManager.cpp
M  +2    -0    service/ActivityManager_p.h

http://commits.kde.org/kactivities/2e417e38e3b9051eebc24138612ac5731e7a20ad