Use Config to Provide Activity Icons

Use the information in the activities config file to provide icons
since Nepomuk's async ontology loading will not be able to provide
that info on session startup.

BUG: 298684
FIXED-IN: 4.8.4
REVIEW: 105008